@startuml IO HKT Simulation
!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml


interface Kind<F, A> <<HKT Bridge>>

interface IOKind<A> extends Kind<IOKind<?>, A> {
  ' Witness F = IOKind<?>
}

interface IO<A> {
  ' Actual IO Implementation
}

package helper <<Rectangle>> {
  class IOKindHelper {
    + {static} IOKind<A> wrap(@NonNull IO<A>)
    + {static} @NonNull IO<A> unwrap(@Nullable Kind<IOKind<?>, A>)
    + {static} Kind<IOKind<?>, A> delay(Supplier<A>)
    + {static} A unsafeRunSync(Kind<IOKind<?>, A>)
    ' ...
  }

  class IOHolder<A> implements IOKind<A> {
    - @NonNull IO<A> ioInstance
  }

  IOKindHelper ..> IOHolder : creates
  IOKindHelper ..> IO : unwraps to / wraps from
  IOHolder o--> IO : holds
}

@enduml